1. 统一 NxN 测试分类与文档能力矩阵 2. 按核心 API 重组测试，合并重复分类并补齐场景。 3. 关联测试方法与兼容性 JSON，支持自动更新能力矩阵。 4. 分离框架单测与真实数据源测试，完善报告校验。 5. 补充分页、映射、事务及枚举等问题的回归测试。 6. 合并 NxN 文档，统一测试编写与能力维护规范。